Update UI for Grocery List

--- a/app/src/main/res/layout/fragment_add_grocery.xml
+++ b/app/src/main/res/layout/fragment_add_grocery.xml
@@ -28,6 +28,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:text="Back"
+                android:backgroundTint="#888888"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -38,22 +39,42 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:text="Add"
+                android:backgroundTint="#00b215"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <!-- Title -->
+
+            <!-- Input Grocery Name -->
+
             <TextView
-                android:id="@+id/add_item_title"
-                android:layout_width="match_parent"
+                android:id="@+id/add_item_title_1"
+                android:layout_width="wrap_content"
                 android:layout_height="60dp"
+                android:layout_marginStart="132dp"
                 android:gravity="center"
-                android:text="@string/add_an_item"
+                android:text="ADD"
                 android:textAllCaps="true"
+                android:textColor="#00b215"
                 android:textSize="@dimen/title_size"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <!-- Input Grocery Name -->
+            <TextView
+                android:id="@+id/add_item_title_2"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:layout_marginStart="7dp"
+                android:text="ITEM"
+                android:textAllCaps="true"
+                android:textSize="@dimen/title_size"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                app:layout_constraintStart_toEndOf="@id/add_item_title_1"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/item_name_label"
                 android:layout_width="@dimen/label_width"
@@ -61,8 +82,10 @@
                 android:gravity="center"
                 android:text="@string/item_name"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/add_item_title" />
+                app:layout_constraintTop_toBottomOf="@id/add_item_title_1" />
 
             <EditText
                 android:id="@+id/item_name_input"
@@ -70,7 +93,7 @@
                 android:layout_height="50dp"
                 android:hint="@string/item_name_hint"
                 app:layout_constraintStart_toEndOf="@id/item_name_label"
-                app:layout_constraintTop_toBottomOf="@id/add_item_title" />
+                app:layout_constraintTop_toBottomOf="@id/add_item_title_1" />
 
             <Space
                 android:id="@+id/item_name_spacer"
@@ -87,6 +110,8 @@
                 android:gravity="center"
                 android:text="@string/item_food_group"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_name_spacer" />
 
@@ -112,6 +137,8 @@
                 android:gravity="center"
                 android:text="@string/item_quantity"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_food_group_spacer" />
 
@@ -140,6 +167,8 @@
                 android:gravity="center"
                 android:text="@string/item_weight"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_quantity_spacer" />
 
@@ -178,6 +207,8 @@
                 android:gravity="center"
                 android:text="@string/item_price"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_weight_spacer" />
 
@@ -206,6 +237,8 @@
                 android:gravity="center"
                 android:text="@string/freezer_status"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_price_spacer" />
 
@@ -231,6 +264,8 @@
                 android:gravity="center"
                 android:text="@string/item_expiration"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/item_freezer_status_spacer" />
 
@@ -251,6 +286,8 @@
                 android:layout_marginTop="24dp"
                 android:text="Expiration Reminders"
                 android:textSize="@dimen/label_text_size"
+                android:textStyle="bold"
+                android:textColor="#00b215"
                 app:layout_constraintStart_toStartOf="@+id/item_expiration_date_label"
                 app:layout_constraintTop_toBottomOf="@+id/item_expiration_calendar" />
 
@@ -270,6 +307,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:text="Add Notification"
+                android:backgroundTint="#00b215"
                 app:layout_constraintStart_toStartOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/notifList" />
         </androidx.constraintlayout.widget.ConstraintLayout>
