--- a/app/src/main/res/layout/fragment_groceries.xml
+++ b/app/src/main/res/layout/fragment_groceries.xml
@@ -10,24 +10,47 @@
     <!-- reuse the bottom_bar for all the main sections -->
     <include layout="@layout/bottom_bar"/>
 
-
-    <TextView
-        android:id="@+id/grocery_list_title"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center"
-        android:textAllCaps="true"
-        android:text="@string/app_name"
-        android:textSize="@dimen/title_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/grocery_list_title_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="SPO"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/grocery_list_title_2"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+            android:id="@+id/grocery_list_title_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="!"
+            android:textColor="#00b215"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/grocery_list_title_1"
+            app:layout_constraintEnd_toStartOf="@+id/grocery_list_title_3"
+            app:layout_constraintStart_toEndOf="@id/grocery_list_title_1"/>
+        <TextView
+            android:id="@+id/grocery_list_title_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="LER ALERT"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/grocery_list_title_1"
+            app:layout_constraintStart_toEndOf="@id/grocery_list_title_2"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <Spinner
         android:id="@+id/grocery_list_sorting_dropdown"
+        android:layout_marginTop="20dp"
         android:layout_width="@dimen/input_width"
         android:layout_height="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grocery_list_title" />
+        app:layout_constraintTop_toBottomOf="@id/grocery_list_title_1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/grocery_list_area"
@@ -43,38 +66,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="92dp"
+        android:backgroundTint="#00b215"
         android:clickable="true"
         android:contentDescription="Grocery_Add_Button"
         android:focusable="true"
         android:src="@android:drawable/ic_input_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageButton
-        android:id="@+id/startDiscardGrocery"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="Start Discard Grocery Button"
-        android:src="@android:drawable/ic_menu_delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grocery_list_title" />
-
-    <ImageButton
-        android:id="@+id/startEditGrocery"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="Start Edit Grocery Button"
-        android:src="@android:drawable/ic_menu_edit"
-        app:layout_constraintEnd_toStartOf="@id/startDiscardGrocery"
-        app:layout_constraintTop_toBottomOf="@id/grocery_list_title" />
-
-    <ImageButton
-        android:id="@+id/removePartialGrocery"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@android:drawable/ic_menu_manage"
-        app:layout_constraintEnd_toStartOf="@id/startEditGrocery"
-        app:layout_constraintTop_toBottomOf="@id/grocery_list_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
