--- a/app/src/main/res/layout/grocery_info_popup.xml
+++ b/app/src/main/res/layout/grocery_info_popup.xml
@@ -12,6 +12,8 @@
         android:gravity="center"
         android:text="@string/item_name"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,6 +35,8 @@
         android:gravity="center"
         android:text="@string/item_food_group"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_name_info_label" />
 
@@ -54,6 +58,8 @@
         android:gravity="center"
         android:text="@string/item_quantity"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_food_group_info_label" />
 
@@ -75,6 +81,8 @@
         android:gravity="center"
         android:text="@string/item_weight"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_quantity_info_label" />
 
@@ -96,6 +104,8 @@
         android:gravity="center"
         android:text="@string/item_price"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_weight_info_label" />
 
@@ -117,6 +127,8 @@
         android:gravity="center"
         android:text="@string/freezer_status"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_price_info_label" />
 
@@ -138,6 +150,8 @@
         android:gravity="center"
         android:text="@string/item_expiration"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_freezer_status_info_label" />
 
@@ -159,6 +173,8 @@
         android:gravity="center"
         android:text="Notifications:"
         android:textSize="@dimen/label_text_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/item_expiration_date_info_label" />
 
