--- a/app/src/main/res/layout/grocery_item_options.xml
+++ b/app/src/main/res/layout/grocery_item_options.xml
@@ -4,75 +4,65 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/item_menu_label"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="ITEM MENU"
+        android:layout_marginStart="@dimen/text_margin"
+        android:layout_marginEnd="@dimen/text_margin"
+        android:textSize="@dimen/title_size"
+        android:textStyle="bold"
+        android:textColor="#00b215"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Space
+        android:id="@+id/item_menu_spacer"
+        android:layout_width="16dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toEndOf="@id/item_menu_label"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/grocery_options_show_info"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginStart="42dp"
+        android:backgroundTint="#314d29"
         android:text="Show Info"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <Button-->
-<!--        android:id="@+id/grocery_options_use"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:layout_marginStart="140dp"-->
-<!--        android:layout_marginEnd="@dimen/text_margin"-->
-<!--        android:text="Use"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/grocery_options_show_info" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/grocery_options_waste"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:layout_marginStart="140dp"-->
-<!--        android:layout_marginEnd="@dimen/text_margin"-->
-<!--        android:text="Waste"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/grocery_options_use" />-->
+        app:layout_constraintTop_toBottomOf="@id/item_menu_label" />
 
     <Button
         android:id="@+id/grocery_options_delete"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginStart="53dp"
+        android:backgroundTint="#314d29"
         android:text="Delete"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/grocery_options_show_info" />
-<!--        app:layout_constraintTop_toBottomOf="@id/grocery_options_waste" />-->
 
     <Button
         android:id="@+id/grocery_options_edit"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginStart="53dp"
+        android:backgroundTint="#314d29"
         android:text="Edit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grocery_options_delete"/>
+        app:layout_constraintTop_toBottomOf="@id/grocery_options_delete" />
 
     <Button
         android:id="@+id/grocery_options_subtract"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="@dimen/text_margin"
+        android:layout_marginStart="47dp"
+        android:backgroundTint="#314d29"
         android:text="Subtract"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grocery_options_edit"/>
+        app:layout_constraintTop_toBottomOf="@id/grocery_options_edit" />
 
-    <Button
-        android:id="@+id/grocery_options_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="@dimen/text_margin"
-        android:text="Cancel"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grocery_options_subtract"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
