Added bird affirmations and a little ui updates to the recipes page

--- a/app/src/main/res/drawable/rounded_square.xml
+++ b/app/src/main/res/drawable/rounded_square.xml
@@ -6,4 +6,5 @@
         android:width="3dp"
         android:color="@android:color/black" />
     <corners android:radius="16dp" />
+    <solid android:color="#FEFEFE"/>
 </shape>
