--- a/app/src/main/res/drawable/bottom_buttons.xml
+++ b/app/src/main/res/drawable/bottom_buttons.xml
@@ -6,6 +6,8 @@
         android:bottom="5dp"
         android:left="5dp"
         android:right="5dp"/>
-    <solid android:color="#FEFEFE"/>
-    <stroke android:width="1dp"/>
+    <solid android:color="#FAFAFA"/>
+    <stroke
+        android:width="1dp"
+        android:color="#DDDDDD" />
 </shape>
