--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -147,12 +147,11 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/open_grocery_list"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="@string/open_grocery_list"
-        android:background="@drawable/test_button"
+        android:background="@drawable/rounded_square"
         android:backgroundTint="@null"
-        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/space3"/>
