--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -108,9 +108,11 @@
         android:layout_height="wrap_content"
         android:background="@drawable/speech_bubble_background"
         android:textColor="@android:color/black"
-        android:textSize="14sp"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:layout_marginEnd="@dimen/label_text_size"
         android:padding="8dp"
-        android:maxWidth="200dp"
+        android:maxWidth="300dp"
         android:visibility="gone"
         android:elevation="10dp"
         app:layout_constraintTop_toBottomOf="@id/header_container"
