--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SpolerAlert" parent="Theme.Material3.DayNight">
+    <style name="Base.Theme.SpolerAlert" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:statusBarColor">#00b215</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
